course/part-1/day-14-kubernetes-ingress-networking/labs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foma-ingress
  namespace: production
spec:
  ingressClassName: nginx
  rules:
    - host: foma.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foma-app
                port:
                  number: 80
